--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,8 @@ akka {
   }
 }
 
+application.enable.master=true
+
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
